Fix path for gradle publish

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,5 +31,6 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         arguments: publish
+        build-root-directory: ./kotlin
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
