--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,14 +17,22 @@ jobs:
       packages: write
     steps:
     - uses: actions/checkout@v4
+    - uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: "aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android,i686-linux-android"
     - name: Rust Cache
       uses: Swatinem/rust-cache@v2
       with:
         cache-on-failure: "true"
+
+    - uses: taiki-e/install-action@v2
+      with:
+        tool: cargo-ndk
     - uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
+
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1
     - name: Publish package
