--- a/WalletSdkRs/RustFramework.xcframework/Info.plist
+++ b/WalletSdkRs/RustFramework.xcframework/Info.plist
@@ -6,13 +6,13 @@
 	<array>
 		<dict>
 			<key>BinaryPath</key>
-			<string>libwallet_sdk_rs.dylib</string>
+			<string>libwallet_sdk_rs.a</string>
 			<key>HeadersPath</key>
 			<string>Headers</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64</string>
 			<key>LibraryPath</key>
-			<string>libwallet_sdk_rs.dylib</string>
+			<string>libwallet_sdk_rs.a</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
@@ -22,13 +22,13 @@
 		</dict>
 		<dict>
 			<key>BinaryPath</key>
-			<string>libwallet_sdk_rs.dylib</string>
+			<string>libwallet_sdk_rs.a</string>
 			<key>HeadersPath</key>
 			<string>Headers</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64_x86_64-simulator</string>
 			<key>LibraryPath</key>
-			<string>libwallet_sdk_rs.dylib</string>
+			<string>libwallet_sdk_rs.a</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
