--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,3 +41,4 @@ jobs:
         build-root-directory: ./kotlin
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        VERSION: ${{ github.ref_name }}
