--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,3 +61,41 @@ jobs:
         artifacts: "RustFramework.xcframework.zip"
         tag: ${{ github.event.inputs.version }}
         name: ${{ github.event.inputs.version }}
+
+  kotlin:
+    runs-on: ubuntu-latest
+    needs: swift
+    defaults:
+      run:
+        working-directory: ./kotlin
+    permissions:
+      contents: read
+      packages: write
+    steps:
+    - uses: actions/checkout@v4
+    - uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: "aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android,i686-linux-android"
+    - name: Rust Cache
+      uses: Swatinem/rust-cache@v2
+      with:
+        cache-on-failure: "true"
+
+    - uses: taiki-e/install-action@v2
+      with:
+        tool: cargo-ndk
+    - uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
+    - name: Publish package
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: publish
+        build-root-directory: ./kotlin
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        VERSION: ${{ github.event.inputs.version }}
