--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
 
     - uses: taiki-e/install-action@v2
       with:
-        tool: cargo-swift
+        tool: cargo-swift@0.6.1
 
     - name: Generate Swift package
       run: cargo swift package -p ios -n WalletSdkRs --release
