--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,10 @@ jobs:
     - name: Update Swift Package definition
       run: |
         sed -i '' 's/.binaryTarget.*/.binaryTarget(name: "RustFramework", url: "https:\/\/github.com\/spruceid\/wallet-sdk-rs\/releases\/download\/${{ github.event.inputs.version }}\/RustFramework.xcframework.zip", checksum: "${{ env.XCF_CHECKSUM }}"),/' Package.swift
+    - name: Update Cocoapods definitions
+      run: |
+        sed -i '' 's/[0-9]+\.[0-9]+\.[0-9]+/${{ github.events.inputs.version }}/' WalletSdkRs.podspec
+        sed -i '' 's/[0-9]+\.[0-9]+\.[0-9]+/${{ github.events.inputs.version }}/' WalletSdkRsRustFramework.podspec
 
     - name: Push changes and tag
       run: |
