--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,13 @@ jobs:
         tag: ${{ github.event.inputs.version }}
         name: ${{ github.event.inputs.version }}
 
+    - name: Publish to CocoaPod register
+      env:
+        COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
+      run: |
+        pod trunk push SpruceIDWalletSdkRsRustFramework.podspec
+        pod trunk push SpruceIDWalletSdkRs.podspec
+
   kotlin:
     runs-on: ubuntu-latest
     needs: swift
