--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,14 +46,14 @@ jobs:
         sed -i '' 's/.binaryTarget.*/.binaryTarget(name: "RustFramework", url: "https:\/\/github.com\/spruceid\/wallet-sdk-rs\/releases\/download\/${{ github.event.inputs.version }}\/RustFramework.xcframework.zip", checksum: "${{ env.XCF_CHECKSUM }}"),/' Package.swift
     - name: Update Cocoapods definitions
       run: |
-        sed -i '' 's/[0-9]\+\.[0-9]\+\.[0-9]\+/${{ github.events.inputs.version }}/' SpruceIDWalletSdkRs.podspec
-        sed -i '' 's/[0-9]\+\.[0-9]\+\.[0-9]\+/${{ github.events.inputs.version }}/' SpruceIDWalletSdkRsRustFramework.podspec
+        sed -i '' -r 's/[0-9]+.[0-9]+.[0-9]+/${{ github.events.inputs.version }}/' SpruceIDWalletSdkRsRustFramework.podspec
+        sed -i '' -r 's/[0-9]+.[0-9]+.[0-9]+/${{ github.events.inputs.version }}/' SpruceIDWalletSdkRs.podspec
 
     - name: Push changes and tag
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git add Package.swift
+        git add Package.swift SpruceIDWalletSdkRs.podspec SpruceIDWalletSdkRsRustFramework.podspec
         git commit -m "Release ${{ github.event.inputs.version }}"
         git push
         git tag ${{ github.event.inputs.version }} -m "${{ github.event.inputs.version }}"
