--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,18 +66,12 @@ jobs:
         tag: ${{ github.event.inputs.version }}
         name: ${{ github.event.inputs.version }}
 
-    # To have the latest version with --quick
-    - name: Install Cocoapods
-      run: gem install cocoapods
-
-    # Using --quick otherwise pod lint will try to download SpruceIDWalletSdkRsRustFramework and it won't be available
-    # yet.
     - name: Publish to CocoaPod register
       env:
         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
       run: |
         pod trunk push SpruceIDWalletSdkRsRustFramework.podspec
-        pod trunk push SpruceIDWalletSdkRs.podspec --quick
+        pod trunk push SpruceIDWalletSdkRs.podspec --synchronous
 
   kotlin:
     runs-on: ubuntu-latest
