Save even on failure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
       with:
         path: ~/.cocoapods/repos
         key: ${{ runner.os }}-cocoapods
+        save-always: true
 
     - uses: taiki-e/install-action@v2
       with:
