--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,13 @@ jobs:
       uses: Swatinem/rust-cache@v2
       with:
         cache-on-failure: "true"
+    # Needed because pod trunk push --synchronous clones a massive repo
+    - name: Cocoapods Cache
+      uses: actions/cache@v4
+      with:
+        path: ~/.cocoapods/repos
+        key: ${{ runner.os }}-cocoapods
+        save-always: true
 
     - uses: taiki-e/install-action@v2
       with:
