Revert unwanted publication removal

--- a/kotlin/walletsdkrs/build.gradle
+++ b/kotlin/walletsdkrs/build.gradle
@@ -114,4 +114,15 @@ publishing {
             }
         }
     }
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.spruceid.wallet.sdk.rs'
+            artifactId = "walletsdkrs"
+            version = System.getenv("VERSION")
+
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
