--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,7 +75,6 @@ jobs:
 
   kotlin:
     runs-on: ubuntu-latest
-    needs: swift
     defaults:
       run:
         working-directory: ./kotlin
@@ -100,15 +99,27 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Import GPG key
+      uses: crazy-max/ghaction-import-gpg@v6
+      with:
+        gpg_private_key: ${{ secrets.MAVEN_GPG_KEY }}
+
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1
-    - name: Publish package
+    - name: Publish package to GHCR
       uses: gradle/gradle-build-action@v2
       with:
         arguments: publish
         build-root-directory: ./kotlin
       env:
-        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        VERSION: ${{ github.event.inputs.version }}
+    - name: Publish package to Central
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: publishReleasePublicationToCentralPortal
+        build-root-directory: ./kotlin
+      env:
+        MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
         VERSION: ${{ github.event.inputs.version }}
