--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ isomdl = { git = "https://github.com/spruceid/isomdl", rev = "f7b05df" }
 
 thiserror = "1.0.56"
 hex = "0.4.3"
+p256 = { version = "0.13.2", features = ["pkcs8"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
 uuid = "1.6.1"
