--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,10 @@ p256 = { version = "0.13.2", features = ["pkcs8"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
 uuid = { version = "1.6.1", features = ["v4"]}
+cose-rs = { git = "https://github.com/spruceid/cose-rs", rev = "877d6c4", features = [
+    "time",
+] }
+x509-cert = { version = "0.2.5" }
 
 [dev-dependencies]
 uniffi = { version = "0.27.1", features = ["bindgen-tests"] }
