--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "wallet-sdk-rs"
+name = "mobile-sdk-rs"
 version = "0.1.0"
 edition = "2021"
 authors = ["Spruce Systems, Inc."]
 license = "Apache-2.0 OR MIT"
-description = "Wallet SDK Rust bindings"
-repository = "https://github.com/spruceid/wallet-sdk-rs/"
+description = "Mobile SDK Rust bindings"
+repository = "https://github.com/spruceid/mobile-sdk-rs/"
 
 [lib]
 crate-type = ["staticlib", "lib", "cdylib"]
-name = "wallet_sdk_rs"
+name = "mobile_sdk_rs"
 
 [[bin]]
 name = "uniffi-bindgen"
@@ -25,7 +25,7 @@ hex = "0.4.3"
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
-uuid = { version = "1.6.1", features = ["v4"]}
+uuid = { version = "1.6.1", features = ["v4"] }
 
 [dev-dependencies]
 uniffi = { version = "0.27.1", features = ["bindgen-tests"] }
