--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,25 +35,25 @@ jobs:
         tool: cargo-swift
 
     - name: Generate Swift package
-      run: cargo swift package -p ios -n WalletSdkRs --release
+      run: cargo swift package -p ios -n MobileSdkRs --release
 
     - name: Compress XCFramework
       run: |
-        zip -9 -r RustFramework.xcframework.zip WalletSdkRs/RustFramework.xcframework
+        zip -9 -r RustFramework.xcframework.zip MobileSdkRs/RustFramework.xcframework
         echo "XCF_CHECKSUM=`swift package compute-checksum RustFramework.xcframework.zip`" >> $GITHUB_ENV
     - name: Update Swift Package definition
       run: |
-        sed -i '' 's/.binaryTarget.*/.binaryTarget(name: "RustFramework", url: "https:\/\/github.com\/spruceid\/wallet-sdk-rs\/releases\/download\/${{ github.event.inputs.version }}\/RustFramework.xcframework.zip", checksum: "${{ env.XCF_CHECKSUM }}"),/' Package.swift
+        sed -i '' 's/.binaryTarget.*/.binaryTarget(name: "RustFramework", url: "https:\/\/github.com\/spruceid\/mobile-sdk-rs\/releases\/download\/${{ github.event.inputs.version }}\/RustFramework.xcframework.zip", checksum: "${{ env.XCF_CHECKSUM }}"),/' Package.swift
     - name: Update Cocoapods definitions
       run: |
-        sed -i '' -r 's/[0-9]+.[0-9]+.[0-9]+/${{ github.event.inputs.version }}/' SpruceIDWalletSdkRsRustFramework.podspec
-        sed -i '' -r 's/[0-9]+.[0-9]+.[0-9]+/${{ github.event.inputs.version }}/' SpruceIDWalletSdkRs.podspec
+        sed -i '' -r 's/[0-9]+.[0-9]+.[0-9]+/${{ github.event.inputs.version }}/' SpruceIDMobileSdkRsRustFramework.podspec
+        sed -i '' -r 's/[0-9]+.[0-9]+.[0-9]+/${{ github.event.inputs.version }}/' SpruceIDMobileSdkRs.podspec
 
     - name: Push changes and tag
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git add Package.swift SpruceIDWalletSdkRs.podspec SpruceIDWalletSdkRsRustFramework.podspec
+        git add Package.swift SpruceIDMobileSdkRs.podspec SpruceIDMobileSdkRsRustFramework.podspec
         git commit -m "Release ${{ github.event.inputs.version }}"
         git push
         git tag ${{ github.event.inputs.version }} -m "${{ github.event.inputs.version }}"
@@ -70,8 +70,8 @@ jobs:
       env:
         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
       run: |
-        pod trunk push SpruceIDWalletSdkRsRustFramework.podspec
-        pod trunk push SpruceIDWalletSdkRs.podspec --synchronous
+        pod trunk push SpruceIDMobileSdkRsRustFramework.podspec
+        pod trunk push SpruceIDMobileSdkRs.podspec --synchronous
 
   kotlin:
     runs-on: ubuntu-latest
