--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ p256 = { version = "0.13.2", features = ["pkcs8"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
 uuid = { version = "1.6.1", features = ["v4"] }
+w3c-vc-barcodes = { path = "../w3c-vc-barcodes" }
+ssi = { git = "https://github.com/spruceid/ssi.git", rev = "88110a9", features = ["secp256r1", "secp384r1"] }
 
 [dev-dependencies]
 uniffi = { version = "0.27.1", features = ["bindgen-tests"] }
