Address PR comments:
- use `tracing::info` in place of `println`
- `&self` instead of `&mut self` in VdcCollection calls
  - `&mut self` was left over from the arena allocator version
- use `uuid::Uuid` instead of `String` for id
- add `vdc_collection` & `local_store` to `lib.rs`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ p256 = { version = "0.13.2", features = ["pkcs8"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
+serde_derive = "1.0.204"
 ssi = { version = "0.8.1", features = ["secp256r1", "secp384r1"] }
 thiserror = "1.0.56"
 tracing = "0.1.40"
