--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,9 @@ isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
 thiserror = "1.0.56"
 hex = "0.4.3"
 p256 = { version = "0.13.2", features = ["pkcs8"] }
-serde = "1.0.204"
+serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
-serde_derive = "1.0.204"
 uuid = { version = "1.6.1", features = ["v4"] }
 tracing = "0.1.40"
 
