Add support for async Kotlin tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   RUSTFLAGS: "-Dwarnings"
-  CLASSPATH: "./jna-5.14.0.jar"
+  CLASSPATH: "./jna-5.14.0.jar:./kotlinx-coroutines-core-jvm-1.6.4.jar"
 
 jobs:
   rust:
@@ -26,6 +26,8 @@ jobs:
     - uses: swift-actions/setup-swift@v1
     - name: Download JNA
       run: wget https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.14.0/jna-5.14.0.jar
+    - name: Download Kotlinx
+      run: wget https://repo1.maven.org/maven2/org/jetbrains/kotlinx/kotlinx-coroutines-core-jvm/1.6.4/kotlinx-coroutines-core-jvm-1.6.4.jar
     - name: Test
       run: cargo test
 
