--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,12 @@ name = "mobile_sdk_rs"
 name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
 
+[features]
+default = []
+
 [dependencies]
-isomdl = "0.1.0"
 hex = "0.4.3"
+isomdl = "0.1.0"
 oid4vp = { git = "https://github.com/spruceid/oid4vp-rs" }
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 serde = { version = "1.0.204", features = ["derive"] }
