--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,29 +16,39 @@ name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
 
 [features]
-default = ["reqwest"]
+default = ["reqwest", "p256"]
 reqwest = ["oid4vp/reqwest"]
+p256 = ["oid4vp/p256"]
 
 [dependencies]
-uniffi = { version = "0.27.1", features = ["cli"] }
-
-isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
-oid4vp = { path = "../oid4vp-rs", default-features = false }
-thiserror = "1.0.56"
+anyhow = "1.0.86"
+async-trait = "0.1.81"
 hex = "0.4.3"
+isomdl = "0.1.0"
+oid4vp = { git = "https://github.com/spruceid/oid4vp-rs" }
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
-uuid = { version = "1.6.1", features = ["v4"] }
+ssi-dids = "0.2.0"
+ssi-verification-methods = "0.1.1"
+thiserror = "1.0.56"
 tracing = "0.1.40"
-async-trait = "0.1.81"
+uniffi = { version = "0.28.1", features = ["cli"] }
 url = "2.5.2"
+uuid = { version = "1.6.1", features = ["v4"] }
+
 
 [dev-dependencies]
-uniffi = { version = "0.27.1", features = ["bindgen-tests"] }
+uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
 
 base64 = "0.22.0"
 
 [build-dependencies]
-uniffi = { version = "0.27.1", features = ["build"] }
+uniffi = { version = "0.28.1", features = ["build"] }
+
+[patch.crates-io]
+isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
+
+[patch.'https://github.com/spruceid/oid4vp-rs']
+oid4vp = { path = "../oid4vp-rs" }
