--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ default = []
 [dependencies]
 anyhow = "1.0.86"
 async-trait = "0.1.81"
+did-jwk = "0.2.0"
 hex = "0.4.3"
 isomdl = "0.1.0"
 oid4vp = { git = "https://github.com/spruceid/oid4vp-rs" }
