--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ p256 = ["oid4vp/p256"]
 [dependencies]
 anyhow = "1.0.86"
 async-trait = "0.1.81"
+did-jwk = "0.2.0"
 hex = "0.4.3"
 isomdl = "0.1.0"
 oid4vp = { git = "https://github.com/spruceid/oid4vp-rs" }
@@ -31,7 +32,10 @@ serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
 ssi-dids = "0.2.0"
+ssi-jwk = { version = "0.2.1", features = ["secp256r1"] }
+ssi-vc = "0.2.1"
 ssi-verification-methods = "0.1.1"
+ssi-claims = "0.1.0"
 thiserror = "1.0.56"
 tracing = "0.1.40"
 uniffi = { version = "0.28.1", features = ["cli"] }
