--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,18 +19,33 @@ path = "uniffi-bindgen.rs"
 uniffi = { version = "0.28.1", features = ["cli"] }
 
 isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
+oid4vci = { path = "../oid4vci-rs" }
+ssi = { version = "0.8.1", features = ["secp256r1", "secp384r1"] }
 
-thiserror = "1.0.56"
+ssi-claims = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
+ssi-dids = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
+ssi-dids-core = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
+ssi-jwk = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
+ssi-jwt = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
+ssi-verification-methods = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
+
+async-trait = "0.1"
+futures = "0.3"
 hex = "0.4.3"
+http = { version = "0.2" }
+json-syntax = "0.12.5"
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 pem-rfc7468 = "0.7.0"
+reqwest = { version = "0.11", features = ["blocking"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
+thiserror = "1.0.56"
+time = { version = "0.3.29", features = ["serde"] }
+tracing = "0.1.40"
+url = { version = "2.1", features = ["serde"]}
 uuid = { version = "1.6.1", features = ["v4"] }
 w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", rev = "372ff39" }
-ssi = { version = "0.8.1", features = ["secp256r1", "secp384r1"] }
-tracing = "0.1.40"
 
 [dev-dependencies]
 uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
