--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,18 +22,13 @@ isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
 oid4vci = { path = "../oid4vci-rs" }
 ssi = { version = "0.8.1", features = ["secp256r1", "secp384r1"] }
 
-ssi-claims = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
-ssi-dids = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
-ssi-dids-core = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
-ssi-jwk = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
-ssi-jwt = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
-ssi-verification-methods = { git = "https://github.com/spruceid/ssi.git", branch = "main" }
+ssi-claims = "0.1.0"
+ssi-dids = "0.2.0"
+ssi-dids-core = "0.1.0"
+ssi-jwk = "0.2.1"
 
-async-trait = "0.1"
 futures = "0.3"
 hex = "0.4.3"
-http = { version = "0.2" }
-json-syntax = "0.12.5"
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 pem-rfc7468 = "0.7.0"
 reqwest = { version = "0.11", features = ["blocking"] }
