--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
 
 [dependencies]
-uniffi = { version = "0.27.1", features = ["cli"] }
+uniffi = { version = "0.28.1", features = ["cli"] }
 
 isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
 
@@ -27,12 +27,14 @@ serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
 uuid = { version = "1.6.1", features = ["v4"] }
+w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", rev = "372ff39" }
+ssi = { version = "0.8.1", features = ["secp256r1", "secp384r1"] }
 tracing = "0.1.40"
 
 [dev-dependencies]
-uniffi = { version = "0.27.1", features = ["bindgen-tests"] }
-
+uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
+tokio = "1.39.2"
 base64 = "0.22.0"
 
 [build-dependencies]
-uniffi = { version = "0.27.1", features = ["build"] }
+uniffi = { version = "0.28.1", features = ["build"] }
