wip: android test harness
Signed-off-by: Ryan Tate <ryan.michael.tate@gmail.com>

--- a/kotlin/mobilesdkrs/build.gradle
+++ b/kotlin/mobilesdkrs/build.gradle
@@ -46,8 +46,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "net.java.dev.jna:jna:5.13.0@aar"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation 'net.java.dev.jna:jna:5.13.0@aar'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0-RC.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0-RC.2'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0'
 }
 
 apply plugin: 'com.github.willir.rust.cargo-ndk-android'
@@ -83,7 +85,7 @@ tasks.register('bindGen', Exec) {
     workingDir "../../"
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
         commandLine("cmd", "/c",
-                "cargo build && " + "cargo run --bin uniffi-bindgen generate --library target\\debug\\libmobile_sdk_rs.dll " + "--language kotlin " + "--out-dir " + outDir.replace('/', '\\'))
+                "cargo build --release && " + "cargo run --bin uniffi-bindgen generate --library target\\release\\libmobile_sdk_rs.dll " + "--language kotlin " + "--out-dir " + outDir.replace('/', '\\'))
     } else {
         def extension
         if (Os.isFamily(Os.FAMILY_MAC)) {
@@ -93,9 +95,9 @@ tasks.register('bindGen', Exec) {
         }
         commandLine("sh", "-c",
                 """\
-                cargo build && \
+                cargo build --release && \
                 cargo run --bin uniffi-bindgen generate \
-                --library target/debug/libmobile_sdk_rs.$extension \
+                --library target/release/libmobile_sdk_rs.$extension \
                 --language kotlin \
                 --out-dir $outDir
                 """)
@@ -161,10 +163,10 @@ signing {
 
 nmcp {
     afterEvaluate {
-        publish("release") {
-            it.username.set(System.getenv("MAVEN_USERNAME"))
-            it.password.set(System.getenv("MAVEN_PASSWORD"))
-            it.publicationType.set("AUTOMATIC")
-        }
+        // publish("release") {
+        //     it.username.set(System.getenv("MAVEN_USERNAME"))
+        //     it.password.set(System.getenv("MAVEN_PASSWORD"))
+        //     it.publicationType.set("AUTOMATIC")
+        // }
     }
 }
