--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,4 +55,5 @@ uniffi = { version = "0.28.1", features = ["build"] }
 isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
 
 [patch.'https://github.com/spruceid/oid4vp-rs']
-oid4vp = { path = "../oid4vp-rs" }
+oid4vp = { git = "https://github.com/Ryanmtate/oid4vp-rs", rev = "2e453ca" }
+# oid4vp = { path = "../oid4vp-rs" }
