--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,20 +16,20 @@ name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
 
 [dependencies]
-uniffi = { version = "0.28.1", features = ["cli"] }
-
-isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
-
-thiserror = "1.0.56"
+isomdl = "0.1.0"
 hex = "0.4.3"
+oid4vp = { git = "https://github.com/spruceid/oid4vp-rs" }
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
+ssi = { version = "0.8.1", features = ["secp256r1", "secp384r1"] }
+thiserror = "1.0.56"
+tracing = "0.1.40"
+uniffi = { version = "0.28.1", features = ["cli"] }
+url = "2.5.2"
 uuid = { version = "1.6.1", features = ["v4"] }
 w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", rev = "372ff39" }
-ssi = { version = "0.8.1", features = ["secp256r1", "secp384r1"] }
-tracing = "0.1.40"
 
 [dev-dependencies]
 uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
@@ -38,3 +38,9 @@ base64 = "0.22.0"
 
 [build-dependencies]
 uniffi = { version = "0.28.1", features = ["build"] }
+
+[patch.crates-io]
+isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
+
+[patch.'https://github.com/spruceid/oid4vp-rs']
+oid4vp = { path = "../oid4vp-rs" }
