--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ path = "uniffi-bindgen.rs"
 [dependencies]
 isomdl = "0.1.0"
 hex = "0.4.3"
-oid4vp = { git = "https://github.com/spruceid/oid4vp-rs" }
+oid4vp = { git = "https://github.com/spruceid/oid4vp-rs", features = [
+    "reqwest",
+] }
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
@@ -31,6 +33,7 @@ url = "2.5.2"
 uuid = { version = "1.6.1", features = ["v4"] }
 w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", rev = "372ff39" }
 anyhow = "1.0.86"
+async-trait = "0.1.81"
 
 [dev-dependencies]
 uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
@@ -45,4 +48,6 @@ isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
 
 [patch.'https://github.com/spruceid/oid4vp-rs']
 # TODO: replace this once oid4vp is merged.
-oid4vp = { git = "https://github.com/Ryanmtate/oid4vp-rs", rev = "2e453ca6" }
+oid4vp = { git = "https://github.com/Ryanmtate/oid4vp-rs", rev = "2e453ca6", features = [
+    "reqwest",
+] }
