Change kotlin JDK settings to get uniffi to build properly

--- a/uniffi.toml
+++ b/uniffi.toml
@@ -2,3 +2,4 @@
 package_name = "com.spruceid.mobile.sdk.rs"
 # Disabling Android optimisations due to uniffi tests breaking on missing import android
 android = false
+android_cleaner = false
