Revert build.gradle to use JVM 1.8 and make uniffi use native android cleaner

--- a/uniffi.toml
+++ b/uniffi.toml
@@ -1,5 +1,5 @@
 [bindings.kotlin]
 package_name = "com.spruceid.mobile.sdk.rs"
 # Disabling Android optimisations due to uniffi tests breaking on missing import android
-android = false
-android_cleaner = false
+# android = false
+android_cleaner = true
