--- a/kotlin/mobilesdkrs/build.gradle
+++ b/kotlin/mobilesdkrs/build.gradle
@@ -163,10 +163,10 @@ signing {
 
 nmcp {
     afterEvaluate {
-        // publish("release") {
-        //     it.username.set(System.getenv("MAVEN_USERNAME"))
-        //     it.password.set(System.getenv("MAVEN_PASSWORD"))
-        //     it.publicationType.set("AUTOMATIC")
-        // }
+        publish("release") {
+            it.username.set(System.getenv("MAVEN_USERNAME"))
+            it.password.set(System.getenv("MAVEN_PASSWORD"))
+            it.publicationType.set("AUTOMATIC")
+        }
     }
 }
