--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,6 +105,8 @@ jobs:
       with:
         gpg_private_key: ${{ secrets.MAVEN_GPG_KEY }}
 
+    - name: Populate local.properties
+      run: echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1
     - name: Publish package to GHCR
