Present mDL Holder from VDC Collection
Move holder into its own module and fix up bugs found in test

Also update flake.nix, uniffi.toml to use Android cleaner API, generate
swift files, and build.gradle to skip nmcp publishing

Sanitize local vdc store before running vdc tests

--- a/kotlin/mobilesdkrs/build.gradle
+++ b/kotlin/mobilesdkrs/build.gradle
@@ -160,11 +160,11 @@ signing {
 }
 
 nmcp {
-    afterEvaluate {
-        publish("release") {
-            it.username.set(System.getenv("MAVEN_USERNAME"))
-            it.password.set(System.getenv("MAVEN_PASSWORD"))
-            it.publicationType.set("AUTOMATIC")
-        }
-    }
+    //afterEvaluate {
+        //publish("release") {
+            //it.username.set(System.getenv("MAVEN_USERNAME"))
+            //it.password.set(System.getenv("MAVEN_PASSWORD"))
+            //it.publicationType.set("AUTOMATIC")
+        //}
+    //}
 }
