--- a/uniffi.toml
+++ b/uniffi.toml
@@ -1,4 +1,4 @@
 [bindings.kotlin]
 package_name = "com.spruceid.mobile.sdk.rs"
 # Disabling Android optimisations due to uniffi tests breaking on missing import android
-android = false
+android = true
