--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,42 +16,45 @@ name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
 
 [dependencies]
+cose-rs = { git = "https://github.com/spruceid/cose-rs", rev = "0018c9b", features = [
+  "time",
+] }
+isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
+oid4vci = { git = "https://github.com/spruceid/oid4vci-rs", rev = "8120138" }
+# oid4vci = { path = "../oid4vci-rs" }
+ssi = { version = "0.9", features = ["secp256r1", "secp384r1"] }
+# ssi = { path = "../ssi" }
+
 async-trait = "0.1"
 base64 = "0.22.0"
 either = "1.13"
 futures = "0.3"
 hex = "0.4.3"
-isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
-oid4vci = { git = "https://github.com/spruceid/oid4vci-rs", rev = "8120138" }
+json-syntax = { version = "0.12.5", features = ["serde_json"] }
+miniz_oxide = "0.7.2"
+num-bigint = "0.4.4"
+num-traits = "0.2.19"
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 pem-rfc7468 = "0.7.0"
 reqwest = { version = "0.11", features = ["blocking"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
-ssi = { version = "0.9", features = ["secp256r1", "secp384r1"] }
+signature = "2.2.0"
 thiserror = "1.0.56"
+time = { version = "0.3.36", features = [
+  "macros",
+  "formatting",
+  "parsing",
+  "serde",
+] }
+time-macros = "0.2.18"
 tracing = "0.1.40"
 uniffi = { version = "0.28.1", features = ["cli"] }
 url = { version = "2.5", features = ["serde"] }
 uuid = { version = "1.6.1", features = ["v4"] }
 w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", rev = "c1c99da" }
 x509-cert = { version = "0.2.5" }
-signature = "2.2.0"
-cose-rs = { git = "https://github.com/spruceid/cose-rs", rev = "0018c9b", features = [
-    "time",
-] }
-time = { version = "0.3.36", features = [
-    "macros",
-    "formatting",
-    "parsing",
-    "serde",
-] }
-time-macros = "0.2.18"
-num-bigint = "0.4.4"
-num-traits = "0.2.19"
-miniz_oxide = "0.7.2"
-json-syntax = { version = "0.12.5", features = ["serde_json"] }
 
 [dev-dependencies]
 rstest = "0.22.0"
