--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ futures = "0.3"
 hex = "0.4.3"
 isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
 oid4vci = { git = "https://github.com/spruceid/oid4vci-rs", rev = "020887f" }
-oid4vp = { git = "https://github.com/spruceid/oid4vp-rs" }
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 pem-rfc7468 = "0.7.0"
 reqwest = { version = "0.11", features = ["blocking"] }
@@ -39,13 +38,10 @@ uuid = { version = "1.6.1", features = ["v4"] }
 w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", rev = "372ff39" }
 
 [dev-dependencies]
-uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
-tokio = "1.39.2"
 base64 = "0.22.0"
+rstest = "0.22.0"
+tokio = "1.39.2"
+uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
 
 [build-dependencies]
 uniffi = { version = "0.28.1", features = ["build"] }
-
-[patch.'https://github.com/spruceid/oid4vp-rs']
-# TODO: replace this once oid4vp is merged.
-oid4vp = { git = "https://github.com/Ryanmtate/oid4vp-rs", rev = "915b922" }
