wip: integrate oid4vp flow
Signed-off-by: Ryan Tate <ryan.tate@spruceid.com>

--- a/kotlin/mobilesdkrs/build.gradle
+++ b/kotlin/mobilesdkrs/build.gradle
@@ -116,6 +116,7 @@ publishing {
                 password = System.getenv("GITHUB_TOKEN")
             }
         }
+        mavenLocal()
     }
     publications {
         // debug(MavenPublication) {
