--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,16 +21,16 @@ cose-rs = { git = "https://github.com/spruceid/cose-rs", rev = "0018c9b", featur
 ] }
 isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
 oid4vci = { git = "https://github.com/spruceid/oid4vci-rs", rev = "d95fe3a" }
-# oid4vci = { path = "../oid4vci-rs" }
+openid4vp = { git = "https://github.com/spruceid/openid4vp", rev = "372f5f5" }
 ssi = { version = "0.9", features = ["secp256r1", "secp384r1"] }
-# ssi = { path = "../ssi" }
 
 async-trait = "0.1"
 base64 = "0.22.0"
 either = "1.13"
 futures = "0.3"
+futures-util = "0.3.31"
 hex = "0.4.3"
-json-syntax = { version = "0.12.5", features = ["serde_json"] }
+json-syntax = "0.12.5"
 log = { version = "0.4", features = ["std", "serde"] }
 miniz_oxide = "0.7.2"
 num-bigint = "0.4.4"
@@ -41,9 +41,9 @@ reqwest = { version = "0.11", features = ["blocking"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = "1.0.111"
+thiserror = "1.0.56"
 signature = "2.2.0"
 ssi-contexts = "0.1.6"
-thiserror = "1.0.56"
 time = { version = "0.3.36", features = [
     "macros",
     "formatting",
@@ -53,18 +53,19 @@ time = { version = "0.3.36", features = [
 time-macros = "0.2.18"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.40"
-uniffi = { version = "0.28.1", features = ["cli"] }
+uniffi = { version = "0.28.1", features = ["cli", "tokio"] }
 url = { version = "2.5", features = ["serde"] }
 uuid = { version = "1.6.1", features = ["v4"] }
 w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", rev = "c1c99da" }
 x509-cert = { version = "0.2.5" }
+urlencoding = "2.1.3"
+
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.13"
 
 [dev-dependencies]
 rstest = "0.22.0"
-tokio = "1.39.2"
 uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
 
 [build-dependencies]
