--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ futures = "0.3"
 hex = "0.4.3"
 isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
 oid4vci = { git = "https://github.com/spruceid/oid4vci-rs", rev = "8120138" }
-# oid4vci = { path = "../oid4vci-rs" }
 p256 = { version = "0.13.2", features = ["pkcs8"] }
 pem-rfc7468 = "0.7.0"
 reqwest = { version = "0.11", features = ["blocking"] }
@@ -36,7 +35,7 @@ tracing = "0.1.40"
 uniffi = { version = "0.28.1", features = ["cli"] }
 url = { version = "2.5", features = ["serde"] }
 uuid = { version = "1.6.1", features = ["v4"] }
-w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", branch = "use-ssi-0.9" }
+w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", rev = "c1c99da" }
 x509-cert = { version = "0.2.5" }
 signature = "2.2.0"
 cose-rs = { git = "https://github.com/spruceid/cose-rs", rev = "0018c9b", features = [
@@ -61,6 +60,3 @@ uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
 
 [build-dependencies]
 uniffi = { version = "0.28.1", features = ["build"] }
-
-[patch.crates-io]
-# ssi = { git = "https://github.com/spruceid/ssi.git" }
