use ubuntu latest m for kt build
Signed-off-by: Ryan Tate <ryan.michael.tate@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   rust:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-m
     steps:
     - uses: actions/checkout@v4
     - name: Rust Cache
