--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   rust:
-    runs-on: ubuntu-latest-m
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - name: Rust Cache
