--- a/kotlin/mobilesdkrs/build.gradle
+++ b/kotlin/mobilesdkrs/build.gradle
@@ -118,15 +118,15 @@ publishing {
         }
     }
     publications {
-        debug(MavenPublication) {
-            groupId = 'com.spruceid.mobile.sdk.rs'
-            artifactId = "mobilesdkrs"
-            version = System.getenv("VERSION")
+        // debug(MavenPublication) {
+        //     groupId = 'com.spruceid.mobile.sdk.rs'
+        //     artifactId = "mobilesdkrs"
+        //     version = System.getenv("VERSION")
 
-            afterEvaluate {
-                from components.release
-            }
-        }
+        //     afterEvaluate {
+        //         from components.release
+        //     }
+        // }
         release(MavenPublication) {
             groupId = 'com.spruceid.mobile.sdk.rs'
             artifactId = "mobilesdkrs"
