uncomment debug maven publication for maven local
Signed-off-by: Ryan Tate <ryan.tate@spruceid.com>

--- a/kotlin/mobilesdkrs/build.gradle
+++ b/kotlin/mobilesdkrs/build.gradle
@@ -119,15 +119,15 @@ publishing {
         mavenLocal()
     }
     publications {
-        // debug(MavenPublication) {
-        //     groupId = 'com.spruceid.mobile.sdk.rs'
-        //     artifactId = "mobilesdkrs"
-        //     version = System.getenv("VERSION")
+        debug(MavenPublication) {
+            groupId = 'com.spruceid.mobile.sdk.rs'
+            artifactId = "mobilesdkrs"
+            version = System.getenv("VERSION")
 
-        //     afterEvaluate {
-        //         from components.release
-        //     }
-        // }
+            afterEvaluate {
+                from components.release
+            }
+        }
         release(MavenPublication) {
             groupId = 'com.spruceid.mobile.sdk.rs'
             artifactId = "mobilesdkrs"
